fix: Fix running tests on java17.